--- a/API.DynamicallyData/Views/Home/Index.cshtml
+++ b/API.DynamicallyData/Views/Home/Index.cshtml
@@ -6,7 +6,6 @@
     <div class="text-center col-12">
         <div class="row">
             <div class="col-6">
-
                 <div class="form-group row">
                     <label for="formControlSelect" class="col-sm-2 col-form-label">Tables</label>
                     <div class="col-sm-10">
@@ -29,7 +28,7 @@
         </div>
         <form>
             <div class="table-responsive">
-                <table class="table table-dark table-condensed">
+                <table class="table table-dark table-condensed table-striped table-bordered table-sm">
                     <thead>
                         <tr id="tableHead">
                         </tr>
